--- a/plugins/cordova-plugin-device/package.json
+++ b/plugins/cordova-plugin-device/package.json
@@ -1,7 +1,35 @@
 {
-  "name": "cordova-plugin-device",
-  "version": "1.1.2",
-  "description": "Cordova Device Plugin",
+  "_from": "cordova-plugin-device@^1.1.6",
+  "_id": "cordova-plugin-device@1.1.6",
+  "_inBundle": false,
+  "_integrity": "sha1-LSF2TK18m4AVI+TgmjDgJLJJM0s=",
+  "_location": "/cordova-plugin-device",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "cordova-plugin-device@^1.1.6",
+    "name": "cordova-plugin-device",
+    "escapedName": "cordova-plugin-device",
+    "rawSpec": "^1.1.6",
+    "saveSpec": null,
+    "fetchSpec": "^1.1.6"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/cordova-plugin-device/-/cordova-plugin-device-1.1.6.tgz",
+  "_shasum": "2d21764cad7c9b801523e4e09a30e024b249334b",
+  "_spec": "cordova-plugin-device@^1.1.6",
+  "_where": "/Users/spilledyear/Desktop/ZMJJ",
+  "author": {
+    "name": "Apache Software Foundation"
+  },
+  "bugs": {
+    "url": "https://github.com/apache/cordova-plugin-device/issues"
+  },
+  "bundleDependencies": false,
   "cordova": {
     "id": "cordova-plugin-device",
     "platforms": [
@@ -20,10 +48,19 @@
       "osx"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-device"
+  "deprecated": false,
+  "description": "Cordova Device Plugin",
+  "devDependencies": {
+    "jshint": "^2.6.0"
   },
+  "engines": {
+    "cordovaDependencies": {
+      "2.0.0": {
+        "cordova": ">100"
+      }
+    }
+  },
+  "homepage": "https://github.com/apache/cordova-plugin-device#readme",
   "keywords": [
     "cordova",
     "device",
@@ -42,13 +79,16 @@
     "cordova-browser",
     "cordova-osx"
   ],
-  "scripts": {
-    "test": "npm run jshint",
-    "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint tests"
-  },
-  "author": "Apache Software Foundation",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "jshint": "^2.6.0"
-  }
+  "name": "cordova-plugin-device",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/apache/cordova-plugin-device.git"
+  },
+  "scripts": {
+    "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint tests",
+    "test": "npm run jshint"
+  },
+  "types": "./types/index.d.ts",
+  "version": "1.1.6"
 }
