--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ZMJJ",
   "version": "1.0.0",
-  "description": "A project with angular1.x, ionic1, webpack",
+  "description": "A project with angular1.x, ionic1, gulp",
   "keywords": [
     "util",
     "functional",
@@ -18,14 +18,14 @@
   "contributors": [],
   "dependencies": {
     "cordova-android": "^6.3.0",
-    "cordova-ios": "^4.5.2",
-    "lodash": "^4.17.4",
-    "cordova-plugin-device": "~1.1.2",
-    "cordova-plugin-splashscreen": "~3.2.2",
-    "cordova-plugin-statusbar": "~2.1.3",
-    "cordova-plugin-whitelist": "~1.2.2",
-    "ionic-plugin-keyboard": "~2.2.1",
-    "cordova-plugin-console": "~1.0.3"
+    "cordova-ios": "4.5.2",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.2",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "bower": "^1.8.2",
@@ -73,10 +73,10 @@
     "plugins": {
       "cordova-plugin-device": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-console": {}
+      "cordova-plugin-console": {},
+      "cordova-plugin-splashscreen": {}
     }
   }
 }
